--- a/course/templates/account/password.html
+++ b/course/templates/account/password.html
@@ -32,9 +32,9 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item dropdown show">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
-                       aria-haspopup="true" aria-expanded="true">{{ userdata.username }}</a>
+                       aria-haspopup="true" aria-expanded="true">{{ user.username }}</a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
-                        {% if userdata.is_superuser %}
+                        {% if user.is_superuser %}
                             <h6 class="dropdown-header">Admin function</h6>
                             <a class="dropdown-item" href="{% url 'invitation_code' %}">Invitation Code</a>
                             <div class="dropdown-divider"></div>
@@ -75,8 +75,8 @@
     {% endif %}
     <br>
     <div class="card">
-        <div class="card-header text-white bg-dark">Change Password for <code>{{ userdata.username }}
-            (UID:{{ userdata.id }})</code></div>
+        <div class="card-header text-white bg-dark">Change Password for <code>{{ user.username }}
+            (UID:{{ user.id }})</code></div>
         <div class="card-body">
             <form action="{% url 'account_password_submit' %}" method="post" id="passwordForm" name="passwordForm">
                 {% csrf_token %}
