--- a/course/templates/account/edit.html
+++ b/course/templates/account/edit.html
@@ -33,9 +33,9 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item dropdown show">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
-                       aria-haspopup="true" aria-expanded="true">{{ userdata.username }}</a>
+                       aria-haspopup="true" aria-expanded="true">{{ user.username }}</a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
-                        {% if userdata.is_superuser %}
+                        {% if user.is_superuser %}
                             <h6 class="dropdown-header">Admin function</h6>
                             <a class="dropdown-item" href="{% url 'invitation_code' %}">Invitation Code</a>
                             <div class="dropdown-divider"></div>
@@ -76,8 +76,8 @@
     {% endif %}
     <br>
     <div class="card">
-        <div class="card-header text-white bg-dark">Change Profile for <code>{{ userdata.username }}
-            (UID:{{ userdata.id }})</code></div>
+        <div class="card-header text-white bg-dark">Change Profile for <code>{{ user.username }}
+            (UID:{{ user.id }})</code></div>
         <div class="card-body">
             <form action="{% url 'account_info_submit' %}" method="post">
                 {% csrf_token %}
@@ -85,17 +85,17 @@
                     <div class="col">
                         <label>First Name</label>
                         <input type="text" class="form-control" name="fn" placeholder="e.g. John"
-                               value="{{ userdata.first_name }}">
+                               value="{{ user.first_name }}">
                     </div>
                     <div class="col">
                         <label>Last Name</label>
                         <input type="text" class="form-control" name="ln" placeholder="e.g. Doe"
-                               value="{{ userdata.last_name }}">
+                               value="{{ user.last_name }}">
                     </div>
                 </div>
                 <div>
                     <label>Email</label>
-                    <input type="email" class="form-control" value="{{ userdata.email }}" disabled>
+                    <input type="email" class="form-control" value="{{ user.email }}" disabled>
                 </div>
                 <hr>
                 <input class="btn btn-primary btn-lg btn-block" type="submit" value="Save Change">
