--- a/course/templates/course/course.html
+++ b/course/templates/course/course.html
@@ -33,9 +33,9 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item dropdown show">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
-                       aria-haspopup="true" aria-expanded="true">{{ userdata.username }}</a>
+                       aria-haspopup="true" aria-expanded="true">{{ user.username }}</a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
-                        {% if userdata.is_superuser %}
+                        {% if user.is_superuser %}
                             <h6 class="dropdown-header">Admin function</h6>
                             <a class="dropdown-item" href="{% url 'invitation_code' %}">Invitation Code</a>
                             <div class="dropdown-divider"></div>
@@ -77,7 +77,7 @@
     <h1>
         <pre>C0urse L1st</pre>
     </h1>
-    {% if userdata.groups.all.0.name == "course_master" %}
+    {% if user.groups.all.0.name == "course_master" %}
         <a href="{% url 'course_detail_edit' '0' %}" class="btn btn-primary">New Course</a>
     {% endif %}
     <table class="table table-hover" style="margin-top: 1rem; margin-bottom: 5rem;">
