--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -273,7 +273,7 @@
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLongTitle">Comment course: {{ coursedata.course_name_en }}</h5>
             </div>
-            <form action="{% url 'course_comments_submit' %}" method="post">
+            <form action="{% url 'course_comments_submit' %}" method="post" onsubmit="return validateForm();" name="commentsform">
                 <div class="modal-body">
                     {% csrf_token %}
                     <label>Notice: Please keep <b>objective</b> when you comment on the course. Comments <b>may be
@@ -305,6 +305,14 @@
         var answer = confirm("Are you sure you want to delete this course record?");
         if (answer) {
             window.location = "{% url 'course_delete' coursedata.id %}"
+        }
+    }
+
+    function validateForm(){
+        var x = document.forms["commentsform"]["comments"].value;
+        if ( x == null || x == ""){
+            alert("Comment must be filled out");
+            return false;
         }
     }
 </script>
