--- a/course/templates/course/detail.html
+++ b/course/templates/course/detail.html
@@ -167,7 +167,7 @@
                                     </div>
                                     <div class="card-body {% if comment.is_recommend %} text-danger {% endif %} ">
                                         <p>{{ comment.content }}</p>
-                                        <footer class="blockquote-footer">{{ comment.sender }}
+                                        <footer class="blockquote-footer"><a href="{% url 'user_info_view' comment.sender.id %}">{{ comment.sender }}</a>
                                             <cite>{{ comment.pub_date }}</cite></footer>
                                     </div>
                                     <div class="card-footer d-flex justify-content-around">
